# release

./: .env.example  .gitignore  QUICKSTART.md  README.md  cli.py  main.py  requirements.txt  setup.py
Backend/: cli.py  main.py  seed.py
Backend/api/: __init__.py
Backend/api/routers/: authors.py  bugs.py  releases.py  summary.py  uploads.py
Backend/core/: __init__.py  config.py
Backend/core/tools/: prompt_loader.py
Backend/models/: __init__.py
Backend/models/entities/: __init__.py  base.py  changelog.py  download_log.py  release.py
Backend/models/schemas/: __init__.py  bug_report.py  changelog.py  common.py  release.py
Backend/services/: __init__.py  base_service.py  release_service.py
Backend/utils/: __init__.py  oracle.py  parallel.py  validators.py  version.py
Frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  vite-env.d.ts
Frontend/src-tauri/: Cargo.toml  tauri.conf.json
Frontend/src-tauri/capabilities/: default.json
Frontend/src-tauri/icons/: icon.icns
Frontend/src-tauri/src/: lib.rs  main.rs
api/: deps.py
api/routers/: __init__.py  update.py
core/: database.py  security.py
core/agents/: __init__.py
core/prompts/: release_summary.md
core/tools/: prompt_builder.py
models/entities/: author.py  bug_report.py  build.py
models/schemas/: author.py  build.py  changelog.py  release.py
scripts/: version.js
services/: author_service.py  bug_service.py  build_service.py  update_service.py
utils/: cache.py  file_handler.py  lang2text.py  logger.py
(+113 files in other folders)
